--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -23,8 +23,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # include tags for semantic-version
+
       - name: Check JS
         run: |
+          npm ci
           npm run build
       - name: Check Java
         run: |
