--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,6 +32,12 @@ jobs:
         run: |
           npm ci
           npm run build
+
+      - name: Set up our JDK environment
+        uses: actions/setup-java@v1.4.3
+        with:
+          java-version: 1.8
+
       - name: Check Java
         run: |
-          cd androud && ./gradlew build
+          cd android && ./gradlew build
